quest feed and cookie api together

--- a/app/views/quests/_answer.html.erb
+++ b/app/views/quests/_answer.html.erb
@@ -1,5 +1,5 @@
 
 <div class = "answer">
-  <%= answer.content unless answer.content.nil? %>
-  <%= answer.url %>
+  <strong>A: </strong><%= answer.content unless answer.content.nil? %>
+  <%= render :partial => 'url', :locals => {:url => answer.url} %>
 </div>
