--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -3,7 +3,7 @@
 
   <%= will_paginate %>
   <br />
-  <div class = "quests">
+  <div class = "quests span-23">
     <%= render @quests %>
   </div>
   <br />
