--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,9 +1,8 @@
 .container{
-  width:710px;
 }
 
 body{
-  background: #cff;
+  background: #e6e2f4;
 }
 
 header{
@@ -190,35 +189,6 @@ ul.users {
   list-style: none;
 }
 
-h1.micropost {
-  margin-bottom: 0.3em;
-}
-
-table.microposts {
-  margin-top: 1em;
-}
-
-table.microposts tr {
-  height: 70px;
-}
-
-table.microposts tr td.gravatar {
-  border-top: 1px solid #ccc;
-  vertical-align: top;
-  width: 50px;
-}
-
-table.microposts tr td.micropost {
-  border-top: 1px solid #ccc;
-  vertical-align: top;
-  padding-top: 10px;
-}
-
-table.microposts tr td.micropost span.timestamp {
-  display: block;
-  font-size: 85%;
-  color: #666;
-}
 
 div.user_info img {
   padding-right: 0.1em;
@@ -235,13 +205,35 @@ div.user_info span.user_name {
 div.user_info span.microposts {
   font-size: 80%;
 }
-
-form.new_micropost {
-  margin-bottom: 2em;
+/* QUESTS */
+div.quest {
+  margin-bottom: 1em;
+  margin-right: 20px;
 }
 
-form.new_micropost textarea {
-  height: 4em;
-  margin-bottom: 0;
+div.inspiration {
+  margin-bottom: 10px;
+  background-color: #f1f1f9;
+}
+
+span.inspiration {
+  padding: 0px 10px 0px 10px;
+}
+
+div.inspiration div.url {
+ padding-left: 10px;
+}
+
+span.question {
+  display: inline-block;
+  background-color: #ddddff;
+  padding: 0px 10px 0px 10px;
+  margin-bottom: 10px;
+}
+
+div.answer {
+  background-color: #f9f1f9;
+  padding: 0px 10px 0px 10px;
+  margin-bottom: 10px;
 }
 
